--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.joezeo</groupId>
-  <artifactId>Server</artifactId>
+  <artifactId>jear</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>Server</name>
+  <name>JEAR</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.joezeo.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,11 +24,6 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.zookeeper</groupId>
-      <artifactId>zookeeper</artifactId>
-      <version>3.5.8</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
